<resources>
    <string name="app_name">Court Counter</string>
    <string name="reset">RESET</string>
    <string name="delete_one">DELETE ONE</string>
    <string name="free_throw">FREE THROW</string>
    <string name="_2_points">+2 POINTS</string>
    <string name="_3_points">+3 POINTS</string>
    <string name="_0">0</string>
    <string name="team_b">Team B</string>
    <string name="team_a">Team A</string>
</resources>